--- a/web/index.html
+++ b/web/index.html
@@ -1,16 +1,77 @@
-<!DOCTYPE html>
 <!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
+To change this template, choose Tools | Templates
 and open the template in the editor.
 -->
+<!DOCTYPE html>
 <html>
     <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>PServer client Migration tool</title>
+
+        <!-- Bootstrap core CSS -->
+        <link href="./css/bootstrap.css" rel="stylesheet">
+
+        <!-- Custom styles for this template -->
+        <link href="./css/global.css" rel="stylesheet">
+        <script src="./js/jquery-1.10.2.min.js"></script>
+        <script src="./js/soapclient.js"></script>
+        <script src="./js/migration.js"></script>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div class="container">
+            <div class="progress progress-striped active" style="display:none" id="progress">
+                <div class="progress-bar"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 1%">
+                </div>
+            </div>
+
+            <!--            <div id="loading"  class="row" style="display:none">
+                            <div class="col-md-3 col-md-offset-2">
+                                <h4 class="text-center"><img src="./img/loadingicon.gif"> Migration Running
+                                    <img src="./img/loadingicon.gif"></h4>
+                            </div>
+                        </div>-->
+            <div class="row">
+                <div class="col-xs-6 col-md-4">
+
+                    <h2 class="form-heading">From PServer:</h2>
+                    <input type="text" class="form-control" placeholder="PServer Url" id="FromPSUrl" autofocus>
+                    <input type="text" class="form-control" placeholder="PServer Port" id="FromPSPort">
+
+
+                </div>
+                <div class="col-xs-6 col-md-4">
+
+                    <h2 class="form-heading">To PServer:</h2>
+                    <input type="text" class="form-control" placeholder="PServer Url" id="ToPSUrl">
+                    <input type="text" class="form-control" placeholder="PServer Port" id="ToPSPort">
+
+                </div>
+            </div>
+
+            <br>
+            <div class="row">
+                <div class="col-xs-6 col-md-4">
+                    <h2 class="form-heading">Client credentials:</h2>
+                    <input type="text" class="form-control" placeholder="PServer Client Username" id="ClientUsername">
+                    <input type="password" class="form-control" placeholder="PServer Client Password" id="ClientPassword">
+
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <h2 class="form-heading">To PServer Admin panel:</h2>
+                    <input type="text" class="form-control" placeholder="Admin panel Username" id="APUsername">
+                    <input type="password" class="form-control" placeholder="Admin panel Password" id="APPassword">
+
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-2">
+                    <a class="btn btn-default btn-primary btn-block" onclick="runMigration();">Run Migration</a>
+                </div>
+                <div class="col-md-2">
+                    <a class="btn btn-default btn-block" onclick="Clear();">Clear</a>
+                </div>
+            </div>
+        </div> <!-- /container -->
     </body>
 </html>
